# cleardeck

./: .env.example  AI_HANDOFF.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  canister_ids.json  dfx.json  package-lock.json  package.json
scripts/: deploy-mainnet.sh  deploy-production.sh  verify-build.sh
src/cleardeck_frontend/: package.json
src/cleardeck_frontend/src/: app.html  index.scss
src/cleardeck_frontend/src/lib/: auth.js  canisters.js  ledger.did.js  logger.js  oisy.js  sounds.js  utils.js
src/cleardeck_frontend/src/lib/components/: ActionFeed.svelte  Card.svelte  ConnectionStatus.svelte  DepositModal.svelte  HandHistory.svelte  HowItWorks.svelte  IcpLogo.svelte  Lobby.svelte  PokerTable.svelte  ShuffleProof.svelte  SoundSettings.svelte  WalletButton.svelte  WithdrawModal.svelte
src/cleardeck_frontend/src/routes/: +page.svelte
src/cleardeck_frontend/static/: .ic-assets.json5
src/history_canister/: Cargo.toml  history_canister.did
src/history_canister/src/: lib.rs
src/history_canister/tests/: unit_tests.rs
src/lobby_canister/: Cargo.toml  lobby_canister.did
src/lobby_canister/src/: lib.rs
src/lobby_canister/tests/: unit_tests.rs
src/table_canister/: Cargo.toml  table_canister.did
src/table_canister/src/: lib.rs
src/table_canister/tests/: integration_test.rs  mod.rs  unit_tests.rs
tests/: README.md
