[package]
name = "history_canister"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[test]]
name = "unit_tests"
path = "tests/unit_tests.rs"

[dev-dependencies]
sha2 = "0.10"

[dependencies]
candid = "0.10"
ic-cdk = "0.19"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
